# EDD_Diciembre

./: .gitignore
Hola_Mundo/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
Hola_Mundo/includes/: Persona.h
Hola_Mundo/includes/MatrizDispersa/: MatrizDispersa.h  Node.h
Hola_Mundo/includes/Tree/: ABB.h  AVL.h  NodeABB.h  NodeAVL.h
Hola_Mundo/src/: Persona.cpp
Hola_Mundo/src/MatrizDispersa/: MatrizDispersa.cpp  Node.cpp
Hola_Mundo/src/Tree/: ABB.cpp  AVL.cpp  NodeABB.cpp  NodeAVL.cpp
Project/: CMakeLists.txt  main.cpp
Project/includes/Classes/: Asset.h  Transaction.h  User.h
Project/includes/SparseMatrix/: Node.h  SparseMatrix.h
Project/src/Classes/: Asset.cpp  Transaction.cpp  User.cpp
Project/src/SparceMatrix/: Node.cpp  SparseMatrix.cpp
Project2/: main.py
Project2/src/DataStructs/ArbolB/: ArbolB.py  NodoArbolB.py
Project2/src/DataStructs/Grafo/: ListaAdyacencia.py
Project2/src/DataStructs/Lista/: Lista.py  Nodo.py
Project2/src/classes/: Persona.py  Vertice.py
